DuplicarExamen2PorOrdenDeLosPeakyBlinders/e1/ExprParser.py
# Generated from Expr.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ExprParser ( Parser ):

    grammarFileName = "Expr.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'import'", "'.'", "';'", "'class'", "'extends'", 
                     "'{'", "'}'", "'='", "'static'", "'('", "')'", "','", 
                     "'['", "']'", "'int'", "'double'", "'String'", "'boolean'", 
                     "'Boolean'", "'System.out.println'", "'Scanner'", "'new'", 
                     "'System.in'", "'for'", "'while'", "'do'", "'return'", 
                     "'+'", "'-'", "'*'", "'/'", "'public'", "'private'", 
                     "'protected'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "ID", "NUMBER", 
                      "STRING", "WS" ]

    RULE_program = 0
    RULE_importDeclaration = 1
    RULE_classDeclaration = 2
    RULE_classBody = 3
    RULE_fieldDeclaration = 4
    RULE_methodDeclaration = 5
    RULE_constructorDeclaration = 6
    RULE_parameterList = 7
    RULE_parameter = 8
    RULE_type = 9
    RULE_primitiveType = 10
    RULE_block = 11
    RULE_statement = 12
    RULE_variableDeclaration = 13
    RULE_assignment = 14
    RULE_printStatement = 15
    RULE_scannerDeclaration = 16
    RULE_loopStatement = 17
    RULE_forLoop = 18
    RULE_whileLoop = 19
    RULE_doWhileLoop = 20
    RULE_returnStatement = 21
    RULE_methodCall = 22
    RULE_arguments = 23
    RULE_expression = 24
    RULE_accessModifier = 25

    ruleNames =  [ "program", "importDeclaration", "classDeclaration", "classBody", 
                   "fieldDeclaration", "methodDeclaration", "constructorDeclaration", 
                   "parameterList", "parameter", "type", "primitiveType", 
                   "block", "statement", "variableDeclaration", "assignment", 
                   "printStatement", "scannerDeclaration", "loopStatement", 
                   "forLoop", "whileLoop", "doWhileLoop", "returnStatement", 
                   "methodCall", "arguments", "expression", "accessModifier" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    ID=35
    NUMBER=36
    STRING=37
    WS=38

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ExprParser.EOF, 0)

        def classDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.ClassDeclarationContext)
            else:
                return self.getTypedRuleContext(ExprParser.ClassDeclarationContext,i)


        def methodDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.MethodDeclarationContext)
            else:
                return self.getTypedRuleContext(ExprParser.MethodDeclarationContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.StatementContext)
            else:
                return self.getTypedRuleContext(ExprParser.StatementContext,i)


        def importDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.ImportDeclarationContext)
            else:
                return self.getTypedRuleContext(ExprParser.ImportDeclarationContext,i)


        def getRuleIndex(self):
            return ExprParser.RULE_program




    def program(self):

        localctx = ExprParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 64680329754) != 0):
                self.state = 56
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 52
                    self.classDeclaration()
                    pass

                elif la_ == 2:
                    self.state = 53
                    self.methodDeclaration()
                    pass

                elif la_ == 3:
                    self.state = 54
                    self.statement()
                    pass

                elif la_ == 4:
                    self.state = 55
                    self.importDeclaration()
                    pass


                self.state = 60
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 61
            self.match(ExprParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImportDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.ID)
            else:
                return self.getToken(ExprParser.ID, i)

        def getRuleIndex(self):
            return ExprParser.RULE_importDeclaration




    def importDeclaration(self):

        localctx = ExprParser.ImportDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_importDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.match(ExprParser.T__0)
            self.state = 64
            self.match(ExprParser.ID)
            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==2:
                self.state = 65
                self.match(ExprParser.T__1)
                self.state = 66
                self.match(ExprParser.ID)
                self.state = 71
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 72
            self.match(ExprParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.ID)
            else:
                return self.getToken(ExprParser.ID, i)

        def classBody(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.ClassBodyContext)
            else:
                return self.getTypedRuleContext(ExprParser.ClassBodyContext,i)


        def getRuleIndex(self):
            return ExprParser.RULE_classDeclaration




    def classDeclaration(self):

        localctx = ExprParser.ClassDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_classDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(ExprParser.T__3)
            self.state = 75
            self.match(ExprParser.ID)
            self.state = 78
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 76
                self.match(ExprParser.T__4)
                self.state = 77
                self.match(ExprParser.ID)


            self.state = 80
            self.match(ExprParser.T__5)
            self.state = 84
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 64425525776) != 0):
                self.state = 81
                self.classBody()
                self.state = 86
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 87
            self.match(ExprParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fieldDeclaration(self):
            return self.getTypedRuleContext(ExprParser.FieldDeclarationContext,0)


        def methodDeclaration(self):
            return self.getTypedRuleContext(ExprParser.MethodDeclarationContext,0)


        def constructorDeclaration(self):
            return self.getTypedRuleContext(ExprParser.ConstructorDeclarationContext,0)


        def classDeclaration(self):
            return self.getTypedRuleContext(ExprParser.ClassDeclarationContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_classBody




    def classBody(self):

        localctx = ExprParser.ClassBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_classBody)
        try:
            self.state = 93
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 89
                self.fieldDeclaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 90
                self.methodDeclaration()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 91
                self.constructorDeclaration()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 92
                self.classDeclaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FieldDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(ExprParser.TypeContext,0)


        def ID(self):
            return self.getToken(ExprParser.ID, 0)

        def expression(self):
            return self.getTypedRuleContext(ExprParser.ExpressionContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_fieldDeclaration




    def fieldDeclaration(self):

        localctx = ExprParser.FieldDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_fieldDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.type_(0)
            self.state = 96
            self.match(ExprParser.ID)
            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8:
                self.state = 97
                self.match(ExprParser.T__7)
                self.state = 98
                self.expression(0)


            self.state = 101
            self.match(ExprParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(ExprParser.TypeContext,0)


        def ID(self):
            return self.getToken(ExprParser.ID, 0)

        def block(self):
            return self.getTypedRuleContext(ExprParser.BlockContext,0)


        def accessModifier(self):
            return self.getTypedRuleContext(ExprParser.AccessModifierContext,0)


        def parameterList(self):
            return self.getTypedRuleContext(ExprParser.ParameterListContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_methodDeclaration




    def methodDeclaration(self):

        localctx = ExprParser.MethodDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_methodDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 30064771072) != 0):
                self.state = 103
                self.accessModifier()


            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==9:
                self.state = 106
                self.match(ExprParser.T__8)


            self.state = 109
            self.type_(0)
            self.state = 110
            self.match(ExprParser.ID)
            self.state = 111
            self.match(ExprParser.T__9)
            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 34360754176) != 0):
                self.state = 112
                self.parameterList()


            self.state = 115
            self.match(ExprParser.T__10)
            self.state = 116
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstructorDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ExprParser.ID, 0)

        def block(self):
            return self.getTypedRuleContext(ExprParser.BlockContext,0)


        def accessModifier(self):
            return self.getTypedRuleContext(ExprParser.AccessModifierContext,0)


        def parameterList(self):
            return self.getTypedRuleContext(ExprParser.ParameterListContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_constructorDeclaration




    def constructorDeclaration(self):

        localctx = ExprParser.ConstructorDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_constructorDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 30064771072) != 0):
                self.state = 118
                self.accessModifier()


            self.state = 121
            self.match(ExprParser.ID)
            self.state = 122
            self.match(ExprParser.T__9)
            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 34360754176) != 0):
                self.state = 123
                self.parameterList()


            self.state = 126
            self.match(ExprParser.T__10)
            self.state = 127
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.ParameterContext)
            else:
                return self.getTypedRuleContext(ExprParser.ParameterContext,i)


        def getRuleIndex(self):
            return ExprParser.RULE_parameterList




    def parameterList(self):

        localctx = ExprParser.ParameterListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_parameterList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.parameter()
            self.state = 134
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==12:
                self.state = 130
                self.match(ExprParser.T__11)
                self.state = 131
                self.parameter()
                self.state = 136
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(ExprParser.TypeContext,0)


        def ID(self):
            return self.getToken(ExprParser.ID, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_parameter




    def parameter(self):

        localctx = ExprParser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_parameter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.type_(0)
            self.state = 138
            self.match(ExprParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitiveType(self):
            return self.getTypedRuleContext(ExprParser.PrimitiveTypeContext,0)


        def ID(self):
            return self.getToken(ExprParser.ID, 0)

        def type_(self):
            return self.getTypedRuleContext(ExprParser.TypeContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_type



    def type_(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ExprParser.TypeContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 18
        self.enterRecursionRule(localctx, 18, self.RULE_type, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [15, 16, 17, 18, 19]:
                self.state = 141
                self.primitiveType()
                pass
            elif token in [35]:
                self.state = 142
                self.match(ExprParser.ID)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 150
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,14,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = ExprParser.TypeContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_type)
                    self.state = 145
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 146
                    self.match(ExprParser.T__12)
                    self.state = 147
                    self.match(ExprParser.T__13) 
                self.state = 152
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,14,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class PrimitiveTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ExprParser.RULE_primitiveType




    def primitiveType(self):

        localctx = ExprParser.PrimitiveTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_primitiveType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 1015808) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.StatementContext)
            else:
                return self.getTypedRuleContext(ExprParser.StatementContext,i)


        def getRuleIndex(self):
            return ExprParser.RULE_block




    def block(self):

        localctx = ExprParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.match(ExprParser.T__5)
            self.state = 159
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 34615558152) != 0):
                self.state = 156
                self.statement()
                self.state = 161
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 162
            self.match(ExprParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableDeclaration(self):
            return self.getTypedRuleContext(ExprParser.VariableDeclarationContext,0)


        def assignment(self):
            return self.getTypedRuleContext(ExprParser.AssignmentContext,0)


        def printStatement(self):
            return self.getTypedRuleContext(ExprParser.PrintStatementContext,0)


        def scannerDeclaration(self):
            return self.getTypedRuleContext(ExprParser.ScannerDeclarationContext,0)


        def loopStatement(self):
            return self.getTypedRuleContext(ExprParser.LoopStatementContext,0)


        def returnStatement(self):
            return self.getTypedRuleContext(ExprParser.ReturnStatementContext,0)


        def methodCall(self):
            return self.getTypedRuleContext(ExprParser.MethodCallContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_statement




    def statement(self):

        localctx = ExprParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_statement)
        try:
            self.state = 172
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,16,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 164
                self.variableDeclaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 165
                self.assignment()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 166
                self.printStatement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 167
                self.scannerDeclaration()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 168
                self.loopStatement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 169
                self.returnStatement()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 170
                self.methodCall()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 171
                self.match(ExprParser.T__2)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(ExprParser.TypeContext,0)


        def ID(self):
            return self.getToken(ExprParser.ID, 0)

        def expression(self):
            return self.getTypedRuleContext(ExprParser.ExpressionContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_variableDeclaration




    def variableDeclaration(self):

        localctx = ExprParser.VariableDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_variableDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 174
            self.type_(0)
            self.state = 175
            self.match(ExprParser.ID)
            self.state = 178
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8:
                self.state = 176
                self.match(ExprParser.T__7)
                self.state = 177
                self.expression(0)


            self.state = 180
            self.match(ExprParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ExprParser.ID, 0)

        def expression(self):
            return self.getTypedRuleContext(ExprParser.ExpressionContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_assignment




    def assignment(self):

        localctx = ExprParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 182
            self.match(ExprParser.ID)
            self.state = 183
            self.match(ExprParser.T__7)
            self.state = 184
            self.expression(0)
            self.state = 185
            self.match(ExprParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(ExprParser.ExpressionContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_printStatement




    def printStatement(self):

        localctx = ExprParser.PrintStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_printStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 187
            self.match(ExprParser.T__19)
            self.state = 188
            self.match(ExprParser.T__9)
            self.state = 189
            self.expression(0)
            self.state = 190
            self.match(ExprParser.T__10)
            self.state = 191
            self.match(ExprParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ScannerDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ExprParser.ID, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_scannerDeclaration




    def scannerDeclaration(self):

        localctx = ExprParser.ScannerDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_scannerDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 193
            self.match(ExprParser.T__20)
            self.state = 194
            self.match(ExprParser.ID)
            self.state = 195
            self.match(ExprParser.T__7)
            self.state = 196
            self.match(ExprParser.T__21)
            self.state = 197
            self.match(ExprParser.T__20)
            self.state = 198
            self.match(ExprParser.T__9)
            self.state = 199
            self.match(ExprParser.T__22)
            self.state = 200
            self.match(ExprParser.T__10)
            self.state = 201
            self.match(ExprParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LoopStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def forLoop(self):
            return self.getTypedRuleContext(ExprParser.ForLoopContext,0)


        def whileLoop(self):
            return self.getTypedRuleContext(ExprParser.WhileLoopContext,0)


        def doWhileLoop(self):
            return self.getTypedRuleContext(ExprParser.DoWhileLoopContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_loopStatement




    def loopStatement(self):

        localctx = ExprParser.LoopStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 34, self.RULE_loopStatement)
        try:
            self.state = 206
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [24]:
                self.enterOuterAlt(localctx, 1)
                self.state = 203
                self.forLoop()
                pass
            elif token in [25]:
                self.enterOuterAlt(localctx, 2)
                self.state = 204
                self.whileLoop()
                pass
            elif token in [26]:
                self.enterOuterAlt(localctx, 3)
                self.state = 205
                self.doWhileLoop()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForLoopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(ExprParser.BlockContext,0)


        def variableDeclaration(self):
            return self.getTypedRuleContext(ExprParser.VariableDeclarationContext,0)

